--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@vuepress/plugin-back-to-top": "^1.9.8",
         "@vuepress/plugin-medium-zoom": "^1.9.8",
         "@vuepress/plugin-pwa": "^1.9.8",
+        "vue-toasted": "^1.1.28",
         "vuepress": "^1.9.8",
         "vuepress-plugin-mathjax": "^1.2.8",
         "vuepress-plugin-medium-zoom": "^1.1.9",
@@ -17,10 +18,7 @@
     },
     "dependencies": {
         "vuepress-plugin-code-copy": "^1.0.6",
-        "vuepress-plugin-copyright": "^1.0.2",
-        "vuepress-plugin-img-lazy": "^1.0.4",
-        "vuepress-plugin-sitemap": "^2.3.1",
-        "vuepress-plugin-tags": "^1.0.2"
+        "vuepress-plugin-copyright": "^1.0.2"
     },
     "scripts": {
         "docs:dev": "vuepress dev docs",
