--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     },
     "dependencies": {
         "vuepress-plugin-code-copy": "^1.0.6",
-        "vuepress-plugin-copyright": "^1.0.2"
+        "vuepress-plugin-copyright": "^1.0.2",
+        "vuepress-plugin-table-of-contents": "^1.1.7"
     },
     "scripts": {
         "docs:dev": "vuepress dev docs",
