--- a/package.json
+++ b/package.json
@@ -8,17 +8,15 @@
     "license": "MIT",
     "devDependencies": {
         "@vuepress/plugin-back-to-top": "^1.9.8",
+        "@vuepress/plugin-google-analytics": "^1.9.9",
         "@vuepress/plugin-medium-zoom": "^1.9.8",
         "@vuepress/plugin-pwa": "^1.9.8",
-        "vue-toasted": "^1.1.28",
         "vuepress": "^1.9.8",
-        "vuepress-plugin-mathjax": "^1.2.8",
-        "vuepress-plugin-medium-zoom": "^1.1.9"
-    },
-    "dependencies": {
         "vuepress-plugin-code-copy": "^1.0.6",
         "vuepress-plugin-container": "^2.1.5",
-        "vuepress-plugin-copyright": "^1.0.2"
+        "vuepress-plugin-copyright": "^1.0.2",
+        "vuepress-plugin-mathjax": "^1.2.8",
+        "vuepress-plugin-medium-zoom": "^1.1.9"
     },
     "scripts": {
         "docs:dev": "vuepress dev docs",
