--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -9,20 +9,20 @@ events {
 }
 
 http {
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+    '$status $body_bytes_sent "$http_referer" '
+    '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log /var/log/nginx/access.log main;
 
-    sendfile            on;
-    tcp_nopush          on;
-    tcp_nodelay         on;
-    keepalive_timeout   30;
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 30;
     types_hash_max_size 2048;
 
-    include             /etc/nginx/mime.types;
-    default_type        application/octet-stream;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
     include /etc/nginx/conf.d/*.conf;
     proxy_hide_header X-Powered-By;
     proxy_hide_header Server;
@@ -42,6 +42,15 @@ http {
 
     # 是否在http header中添加Vary: Accept-Encoding，建议开启
     gzip_vary on;
+
+    server {
+        listen 80;
+        server_tokens off;
+        types {
+        }
+        default_type "text/html; charset=utf-8";
+        return 404 "404 Not Found";
+    }
 
     server {
         listen 80;
@@ -73,4 +82,3 @@ http {
         location = /50x.html {
         }
     }
-}
