--- a/.github/workflows/vue-press-build-and-push.yml
+++ b/.github/workflows/vue-press-build-and-push.yml
@@ -20,7 +20,7 @@ jobs:
           cache-dependency-path: yarn.lock
 
       - name: Install dependency and Build
-        run: yarn && yarn docs:build
+        run: yarn && yarn docs:build:mflyyou
 
       - name: Deploy GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
